Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -234,23 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'jam.saurav@gmail.com'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "email = \"jam.saurav@gmail.com\"\n",
-    "email"
+    "email = \"jam.saurav@gmail.com\""
    ]
   },
   {
