--- a/index.ipynb
+++ b/index.ipynb
@@ -464,7 +464,7 @@
    },
    "outputs": [],
    "source": [
-    "name # 'Liz Kaplan'"
+    "name = 'Liz Kaplan'"
    ]
   },
   {
@@ -475,7 +475,7 @@
    },
    "outputs": [],
    "source": [
-    "email # 'liz@ka-plan.com'"
+    "email = 'liz@ka-plan.com'"
    ]
   },
   {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "'Send an email to Art Vandelay at jam.saurav@gmail.com to say how nice it was meeting yesterday.'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
