Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -522,13 +522,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "name = A"
+    "name = 'art vandelay'"
    ]
   },
   {
